bundle/tests/scorecard/kuttl/ingress-test/04-assert.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kuttlingresstest
  labels:
    app: mailhog-kuttl
    app.kubernetes.io/created-by: mailhog.operators.patrick.mx
    app.kubernetes.io/instance: kuttlingresstest
    app.kubernetes.io/managed-by: mailhog.operators.patrick.mx
    app.openshift.io/runtime: golang
    mailhoginstance_cr: kuttlingresstest
    mailhogtype: mailhoginstance
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuttlingresstest
                port:
                  name: http
status:
  loadBalancer: {}
